fixed the layout issue of game screen

--- a/component/Screens/Game/GameScreen.module.scss
+++ b/component/Screens/Game/GameScreen.module.scss
@@ -1,13 +1,10 @@
-.btns {
-  position: absolute;
-  left: 16px;
-  bottom: 12.15%;
-  height: 57.69%;
+.bg {
+  width: 100vw;
+  max-width: 500px;
+  position: relative;
+  overflow: hidden;
 
-  width: calc(100% - 32px);
-
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
+  > div {
+    overflow: hidden;
+  }
 }
